@@ -7,6 +7,8 @@ dillo-2.1
 +- Added support for numeric IPv6 addresses entered into the url bar.
  - Used the URL authority part instead of stripped default port in HTTP query.
    Patch: Justus Winter
++- Fix for file inputs without values (forms).
+   Patch: place (AKA corvid)
 
 dillo-2.0
 
